[tool.poetry]
name = "Hotbox"
version = "0.0.1"
description = "The hotbox project"
authors = ["Xavier Gordillo Ramos"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.8.2"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
