[tool.poetry]
name = "Hotbox"
version = "0.0.1"
description = "The hotbox project"
authors = ["Xavier Gordillo Ramos"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.8.2"
flask = "^1.1.1"
gunicorn = "^20.0.4"
flask-sqlalchemy = "^2.4.1"
psycopg2 = "^2.8.5"
youtube-dl = "^2020.3.24"
Flask-Script = "^2.0.6"
Flask-SocketIO = "^4.3.0"
gevent = "^20.4.0"
flask-cors = "^3.0.8"
spotipy = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
